--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -135,6 +135,48 @@
 
     <hr>
 
+    <div class="container">
+        <div class="row text">
+
+            <!-- WO WE ARE -->
+
+            <div class="col-12 col-lg-4">
+                <h3 class="text-center">WO WE ARE</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus ea quas
+                    architecto nobis,
+                    voluptates saepe? Error minus magni officia animi praesentium eum nisi omnis, quo sint tempora modi,
+                    pariatur nostrum. Esse, cumque ad rem ullam, maxime ea sit
+                    sunt fuga itaque nihil, nam eius est numquam quidem quod! Atque perferendis nihil accusantium?</p>
+            </div>
+
+            <!-- GET IN TOUCH -->
+
+            <div class="col-12 col-lg-4 text-center">
+                <h3 class="text-center">GET IN TOUCH</h3>
+                <p><strong>My Company, Inc.</strong><br>Sunny Automn Plaza, Grand Coulee,<br>CA, 91308-4075, US<br>P:
+                    (123) 456-7890</p>
+            </div>
+
+            <!-- NEWSLETTER -->
+
+            <div class="col-12 col-lg-4">
+                <h3 class="text-center">NEWSLETTER</h3>
+                <form action="">
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                    </div>
+                    <button type="submit" class="btn btn-dark">Subscribe</button>
+                </form>
+            </div>
+
+        </div>
+
+        <hr>
+
+    </div>
+
+    <p class="text-center">Copyright © MyCompany. All rights reserved.</p>
+
 
 
     <!-- Optional JavaScript -->
